--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Fifteen Puzzle Game</title>
+    <link rel="shortcut icon" href="./img/icon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="./css/styles.css" />
     <script defer type="module" src="./js/main.js"></script>
   </head>
