--- a/index.html
+++ b/index.html
@@ -8,5 +8,17 @@
     <link rel="stylesheet" href="./css/styles.css" />
     <script defer type="module" src="./js/main.js"></script>
   </head>
-  <body></body>
+  <body>
+    <div id="image-choice">
+      <img src="./img/angle-left-solid.svg" id="arrow-left" class="arrow" />
+      <img src="./img/cat.jpg" id="img" />
+      <img src="./img/angle-right-solid.svg" id="arrow-right" class="arrow" />
+    </div>
+    <div id="buttons">
+      <button class="button" data-size="3">3x3</button>
+      <button class="button" data-size="4">4x4</button>
+      <button class="button" data-size="5">5x5</button>
+      <button class="button" data-size="6">6x6</button>
+    </div>
+  </body>
 </html>
