--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
       <button class="button" data-size="5">5x5</button>
       <button class="button" data-size="6">6x6</button>
     </div>
+    <div id="timer">0:0:0:000</div>
   </body>
 </html>
