--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   <body>
     <div id="image-choice">
       <img src="./img/angle-left-solid.svg" id="arrow-left" class="arrow" />
-      <img src="./img/cat.jpg" id="img" />
+      <div id="img-box">
+        <div id="img" style="width: 170px"></div>
+      </div>
       <img src="./img/angle-right-solid.svg" id="arrow-right" class="arrow" />
     </div>
     <div id="buttons">
@@ -20,6 +22,20 @@
       <button class="button" data-size="5">5x5</button>
       <button class="button" data-size="6">6x6</button>
     </div>
-    <div id="timer">0:0:0:000</div>
+    <div id="timer">
+      <img src="./img/0.png" />
+      <img src="./img/colon.png" />
+      <img src="./img/0.png" />
+      <img src="./img/colon.png" />
+      <img src="./img/0.png" />
+      <img src="./img/colon.png" />
+      <img src="./img/0.png" />
+      <img src="./img/0.png" />
+      <img src="./img/0.png" />
+    </div>
+    <div id="board"></div>
+    <div id="footer">
+      <a href="./highscores.html" id="high-scores">Najlepsze czasy</a>
+    </div>
   </body>
 </html>
