cookies fixed, tiles move animation, new image

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="image-choice">
       <img src="./img/angle-left-solid.svg" id="arrow-left" class="arrow" />
       <div id="img-box">
-        <div id="img" style="width: 170px"></div>
+        <div id="img" style="width: 170px" title="Kotek"></div>
       </div>
       <img src="./img/angle-right-solid.svg" id="arrow-right" class="arrow" />
     </div>
@@ -24,9 +24,12 @@
     </div>
     <div id="timer">
       <img src="./img/0.png" />
-      <img src="./img/colon.png" />
       <img src="./img/0.png" />
       <img src="./img/colon.png" />
+      <img src="./img/0.png" />
+      <img src="./img/0.png" />
+      <img src="./img/colon.png" />
+      <img src="./img/0.png" />
       <img src="./img/0.png" />
       <img src="./img/colon.png" />
       <img src="./img/0.png" />
